welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: illegal start of simple expression
  for(i<- 0 to 3)){
                 ^